--- a/NEC_data_cleaning.ipynb
+++ b/NEC_data_cleaning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMfitgELd+dcueyZ0Yxz/g8",
+      "authorship_tag": "ABX9TyOsEsgnGsfHEfWPddqpQNxc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28712,11 +28712,11 @@
         "print(prefix_percentages.sort_values(ascending=False))\n"
       ],
       "metadata": {
-        "id": "Uoh7-5Pnz-TA",
-        "outputId": "6f1a6500-777d-43d2-ee59-fce6f0acc73b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Uoh7-5Pnz-TA",
+        "outputId": "6f1a6500-777d-43d2-ee59-fce6f0acc73b"
       },
       "execution_count": 104,
       "outputs": [
@@ -28761,6 +28761,315 @@
             "R0G     0.081566\n",
             "R5A     0.081566\n",
             "Name: POSTAL PREFIX, dtype: float64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "I am listing the median Upload Speed, Download Speed, Jitter, Latency, and Packet Loss for each Postal Prefix in Winnipeg. US & DS are descending and J, L & PL are ascending"
+      ],
+      "metadata": {
+        "id": "f9IplAliFwI-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calculate the median metrics for each postal prefix\n",
+        "median_metrics = winnipeg_data.groupby('POSTAL PREFIX')[['UPLOAD SPEED', 'DOWNLOAD SPEED', 'JITTER', 'LATENCY', 'PACKET LOSS']].median(numeric_only=True)\n",
+        "\n",
+        "# Sort the median metrics as specified\n",
+        "sorted_upload_speed = median_metrics['UPLOAD SPEED'].sort_values(ascending=False)\n",
+        "sorted_download_speed = median_metrics['DOWNLOAD SPEED'].sort_values(ascending=False)\n",
+        "sorted_jitter = median_metrics['JITTER'].sort_values(ascending=True)\n",
+        "sorted_latency = median_metrics['LATENCY'].sort_values(ascending=True)\n",
+        "sorted_packet_loss = median_metrics['PACKET LOSS'].sort_values(ascending=True)\n",
+        "\n",
+        "# Print the sorted median metrics\n",
+        "print(\"Median UPLOAD SPEED for each POSTAL PREFIX (descending order):\")\n",
+        "print(sorted_upload_speed)\n",
+        "print()\n",
+        "\n",
+        "print(\"Median DOWNLOAD SPEED for each POSTAL PREFIX (descending order):\")\n",
+        "print(sorted_download_speed)\n",
+        "print()\n",
+        "\n",
+        "print(\"Median JITTER for each POSTAL PREFIX (ascending order):\")\n",
+        "print(sorted_jitter)\n",
+        "print()\n",
+        "\n",
+        "print(\"Median LATENCY for each POSTAL PREFIX (ascending order):\")\n",
+        "print(sorted_latency)\n",
+        "print()\n",
+        "\n",
+        "print(\"Median PACKET LOSS for each POSTAL PREFIX (ascending order):\")\n",
+        "print(sorted_packet_loss)\n",
+        "print()\n"
+      ],
+      "metadata": {
+        "id": "ZeOT3WKRM3ry",
+        "outputId": "cae891b4-0158-4a41-b53a-86050141d148",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 122,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Median UPLOAD SPEED for each POSTAL PREFIX (descending order):\n",
+            "POSTAL PREFIX\n",
+            "R0C    359.180\n",
+            "R3H     93.330\n",
+            "R3A     57.720\n",
+            "R5A     47.820\n",
+            "R0G     19.480\n",
+            "R3K     18.740\n",
+            "R2J     18.370\n",
+            "R3W     14.950\n",
+            "R3Y     14.750\n",
+            "R3P     14.620\n",
+            "R2L     13.720\n",
+            "R3R     13.150\n",
+            "R3E     11.450\n",
+            "R3X     11.215\n",
+            "R2X     10.260\n",
+            "R3V     10.200\n",
+            "R2K     10.010\n",
+            "R3T      9.805\n",
+            "R2Y      9.760\n",
+            "R2W      9.720\n",
+            "R3B      8.900\n",
+            "R2P      8.280\n",
+            "R3G      8.070\n",
+            "R2H      7.640\n",
+            "R3M      7.510\n",
+            "R3C      6.990\n",
+            "R2G      6.950\n",
+            "R2M      6.805\n",
+            "R3L      6.010\n",
+            "R2N      5.185\n",
+            "R3N      5.020\n",
+            "R2V      4.750\n",
+            "R2C      4.365\n",
+            "R3J      2.000\n",
+            "J0S      1.150\n",
+            "R2R      0.840\n",
+            "Name: UPLOAD SPEED, dtype: float64\n",
+            "\n",
+            "Median DOWNLOAD SPEED for each POSTAL PREFIX (descending order):\n",
+            "POSTAL PREFIX\n",
+            "R0C    277.670\n",
+            "R3K    186.980\n",
+            "R2Y    166.290\n",
+            "R2C    139.035\n",
+            "R3R     99.300\n",
+            "R3A     97.610\n",
+            "R2L     90.200\n",
+            "R3H     89.270\n",
+            "R2R     88.250\n",
+            "R3P     85.450\n",
+            "R5A     82.395\n",
+            "R3Y     80.125\n",
+            "R3X     77.430\n",
+            "R0G     73.010\n",
+            "R3B     69.945\n",
+            "R3E     69.245\n",
+            "R2J     67.390\n",
+            "R3L     64.670\n",
+            "R2M     62.460\n",
+            "R2W     58.980\n",
+            "R2X     53.830\n",
+            "R3T     52.320\n",
+            "R3V     49.500\n",
+            "R3M     48.520\n",
+            "R2P     47.505\n",
+            "R3G     44.215\n",
+            "R2N     40.335\n",
+            "R3N     39.705\n",
+            "R3W     38.075\n",
+            "R2V     36.470\n",
+            "R2G     35.320\n",
+            "R2K     35.020\n",
+            "R2H     29.130\n",
+            "R3C     28.780\n",
+            "J0S     21.030\n",
+            "R3J      7.700\n",
+            "Name: DOWNLOAD SPEED, dtype: float64\n",
+            "\n",
+            "Median JITTER for each POSTAL PREFIX (ascending order):\n",
+            "POSTAL PREFIX\n",
+            "J0S    0.040\n",
+            "R3P    0.260\n",
+            "R0C    0.430\n",
+            "R3H    0.560\n",
+            "R3B    0.840\n",
+            "R2R    0.970\n",
+            "R2W    1.220\n",
+            "R3N    1.405\n",
+            "R2L    1.520\n",
+            "R3L    1.520\n",
+            "R2J    1.540\n",
+            "R3M    1.570\n",
+            "R3Y    1.635\n",
+            "R2V    1.640\n",
+            "R2C    1.665\n",
+            "R3X    1.730\n",
+            "R3G    1.810\n",
+            "R2Y    1.840\n",
+            "R3C    2.015\n",
+            "R2H    2.090\n",
+            "R2G    2.100\n",
+            "R2X    2.115\n",
+            "R2K    2.120\n",
+            "R3R    2.130\n",
+            "R2P    2.135\n",
+            "R0G    2.150\n",
+            "R3E    2.180\n",
+            "R5A    2.310\n",
+            "R3J    2.340\n",
+            "R3T    2.650\n",
+            "R2N    2.675\n",
+            "R2M    2.765\n",
+            "R3W    2.955\n",
+            "R3K    2.980\n",
+            "R3A    3.350\n",
+            "R3V    3.600\n",
+            "Name: JITTER, dtype: float64\n",
+            "\n",
+            "Median LATENCY for each POSTAL PREFIX (ascending order):\n",
+            "POSTAL PREFIX\n",
+            "J0S    23.610\n",
+            "R3H    34.000\n",
+            "R2R    34.210\n",
+            "R2C    35.015\n",
+            "R3Y    36.475\n",
+            "R3K    36.830\n",
+            "R3L    37.000\n",
+            "R3B    37.585\n",
+            "R2M    37.990\n",
+            "R3T    38.080\n",
+            "R2J    38.920\n",
+            "R2X    39.310\n",
+            "R2Y    39.450\n",
+            "R3A    39.975\n",
+            "R2N    40.620\n",
+            "R3R    40.740\n",
+            "R0G    42.430\n",
+            "R2P    43.670\n",
+            "R2L    44.080\n",
+            "R3W    44.795\n",
+            "R3N    44.830\n",
+            "R3G    45.675\n",
+            "R3V    45.820\n",
+            "R2H    46.220\n",
+            "R3X    46.865\n",
+            "R2K    47.890\n",
+            "R3P    48.820\n",
+            "R3M    49.160\n",
+            "R2W    49.520\n",
+            "R3E    49.715\n",
+            "R3C    50.480\n",
+            "R2G    50.990\n",
+            "R2V    52.790\n",
+            "R5A    54.875\n",
+            "R3J    57.170\n",
+            "R0C    59.420\n",
+            "Name: LATENCY, dtype: float64\n",
+            "\n",
+            "Median PACKET LOSS for each POSTAL PREFIX (ascending order):\n",
+            "POSTAL PREFIX\n",
+            "R5A    0.000\n",
+            "R0G    0.000\n",
+            "R2N    0.000\n",
+            "R2M    0.000\n",
+            "R2Y    0.010\n",
+            "R3A    0.010\n",
+            "R3E    0.020\n",
+            "R3K    0.020\n",
+            "R3V    0.040\n",
+            "R2X    0.045\n",
+            "R2G    0.060\n",
+            "R3T    0.080\n",
+            "R3Y    0.100\n",
+            "R3L    0.110\n",
+            "R2P    0.130\n",
+            "R2R    0.135\n",
+            "R3B    0.145\n",
+            "R2L    0.160\n",
+            "R3R    0.220\n",
+            "J0S    0.230\n",
+            "R2J    0.240\n",
+            "R3X    0.265\n",
+            "R3M    0.270\n",
+            "R2K    0.280\n",
+            "R3W    0.320\n",
+            "R2C    0.350\n",
+            "R3C    0.405\n",
+            "R2H    0.450\n",
+            "R3N    0.545\n",
+            "R3G    0.755\n",
+            "R2V    1.140\n",
+            "R3J    1.530\n",
+            "R0C    1.900\n",
+            "R2W    3.100\n",
+            "R3H    6.850\n",
+            "R3P    9.040\n",
+            "Name: PACKET LOSS, dtype: float64\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Step 1: Filter the data for tests in Winnipeg\n",
+        "winnipeg_data = df[df['CLIENT CITY'] == 'Winnipeg']\n",
+        "\n",
+        "# Step 2: Calculate the median metrics for each POSTAL PREFIX\n",
+        "median_metrics = winnipeg_data.groupby('POSTAL PREFIX').median()\n",
+        "\n",
+        "# Step 3: Check if any of the median metrics meet the criteria\n",
+        "criteria_met = (median_metrics['DOWNLOAD SPEED'] >= 50) & \\\n",
+        "               (median_metrics['UPLOAD SPEED'] >= 10) & \\\n",
+        "               (median_metrics['LATENCY'] <= 50) & \\\n",
+        "               (median_metrics['JITTER'] <= 5) & \\\n",
+        "               (median_metrics['PACKET LOSS'] <= 0.25)\n",
+        "\n",
+        "# Step 4: List the POSTAL PREFIX that meet the criteria\n",
+        "postal_prefixes_met_criteria = median_metrics.index[criteria_met].tolist()\n",
+        "\n",
+        "print(\"POSTAL PREFIX that meet the criteria:\")\n",
+        "print(postal_prefixes_met_criteria)\n"
+      ],
+      "metadata": {
+        "id": "Ji4skXY7D0nu",
+        "outputId": "da161027-ca21-49ee-8bdf-64235a7c1718",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 105,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "POSTAL PREFIX that meet the criteria:\n",
+            "['R0G', 'R2J', 'R2L', 'R2X', 'R3A', 'R3E', 'R3K', 'R3R', 'R3Y']\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-105-857984317974>:5: FutureWarning: The default value of numeric_only in DataFrameGroupBy.median is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+            "  median_metrics = winnipeg_data.groupby('POSTAL PREFIX').median()\n"
           ]
         }
       ]
