--- a/NEC_data_cleaning.ipynb
+++ b/NEC_data_cleaning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOsEsgnGsfHEfWPddqpQNxc",
+      "authorship_tag": "ABX9TyMmf1+UCTM9xWVZwZdlM81o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28675,6 +28675,79 @@
     {
       "cell_type": "markdown",
       "source": [
+        "I need to count the occurence of each postal prefix to make sure there are enough in each to run meaningful analyses"
+      ],
+      "metadata": {
+        "id": "cddTcSyhPRiH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# Assuming your dataset is loaded into a DataFrame called 'df' with a column named 'POSTAL PREFIX'\n",
+        "postal_code_counts = df['POSTAL PREFIX'].value_counts()\n",
+        "\n",
+        "print(postal_code_counts)\n"
+      ],
+      "metadata": {
+        "id": "y-EWMrjaPEC1",
+        "outputId": "d4ebbdc7-913b-4863-cbcf-9e63cf6af71b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 123,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "R2M    2450\n",
+            "R2N    1224\n",
+            "R3T     887\n",
+            "R2W     622\n",
+            "R3C     607\n",
+            "R3J     539\n",
+            "R3G     530\n",
+            "R2V     456\n",
+            "R2C     452\n",
+            "R3B     423\n",
+            "R3P     324\n",
+            "R3L     309\n",
+            "R3R     284\n",
+            "R2Y     283\n",
+            "R3M     267\n",
+            "R2K     259\n",
+            "R2G     235\n",
+            "R2J     233\n",
+            "R3Y     185\n",
+            "R2P     168\n",
+            "R3N     164\n",
+            "R2H     160\n",
+            "R2R     136\n",
+            "R3X     126\n",
+            "R3K     104\n",
+            "R2X      96\n",
+            "R3V      93\n",
+            "R3W      66\n",
+            "R2L      60\n",
+            "R3E      58\n",
+            "R3H      35\n",
+            "R3A      12\n",
+            "R5A       2\n",
+            "R0G       1\n",
+            "J0S       1\n",
+            "R0C       1\n",
+            "Name: POSTAL PREFIX, dtype: int64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Now I want the % of each postal prefix that meet the criteria for high-quality internet in Winnipeg, sorted highest to lowest"
       ],
       "metadata": {
@@ -28809,11 +28882,11 @@
         "print()\n"
       ],
       "metadata": {
-        "id": "ZeOT3WKRM3ry",
-        "outputId": "cae891b4-0158-4a41-b53a-86050141d148",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ZeOT3WKRM3ry",
+        "outputId": "cae891b4-0158-4a41-b53a-86050141d148"
       },
       "execution_count": 122,
       "outputs": [
@@ -29048,11 +29121,11 @@
         "print(postal_prefixes_met_criteria)\n"
       ],
       "metadata": {
-        "id": "Ji4skXY7D0nu",
-        "outputId": "da161027-ca21-49ee-8bdf-64235a7c1718",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Ji4skXY7D0nu",
+        "outputId": "da161027-ca21-49ee-8bdf-64235a7c1718"
       },
       "execution_count": 105,
       "outputs": [
