--- a/NEC_data_cleaning.ipynb
+++ b/NEC_data_cleaning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMmf1+UCTM9xWVZwZdlM81o",
+      "authorship_tag": "ABX9TyMTykmwMFU5yFb2II4So79N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28692,11 +28692,11 @@
         "print(postal_code_counts)\n"
       ],
       "metadata": {
-        "id": "y-EWMrjaPEC1",
-        "outputId": "d4ebbdc7-913b-4863-cbcf-9e63cf6af71b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "y-EWMrjaPEC1",
+        "outputId": "d4ebbdc7-913b-4863-cbcf-9e63cf6af71b"
       },
       "execution_count": 123,
       "outputs": [
@@ -28748,6 +28748,55 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Removing any Postal Prefix that is <30, which also happens to account for rural, non-Winnipeg/Manitoba prefixes: R3A, R5A, R0G, J0A & R0C"
+      ],
+      "metadata": {
+        "id": "Ov6Lr3bcRoK9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# Number of rows before deletion\n",
+        "num_rows_before = len(df)\n",
+        "\n",
+        "# Filter rows with specific POSTAL PREFIX values\n",
+        "postal_prefix_filter = ['R3A', 'R5A', 'R0G', 'J0S', 'R0C']\n",
+        "df_filtered = df[~df['POSTAL PREFIX'].isin(postal_prefix_filter)]\n",
+        "\n",
+        "# Save the filtered DataFrame to CSV\n",
+        "df_filtered.to_csv('https://raw.githubusercontent.com/ShanChartrand/NECDataCleaning/main/necoriginal.csv', index=False)\n",
+        "\n",
+        "# Number of rows after deletion\n",
+        "num_rows_after = len(df_filtered)\n",
+        "\n",
+        "print(\"Number of rows before deletion:\", num_rows_before)\n",
+        "print(\"Number of rows after deletion:\", num_rows_after)\n"
+      ],
+      "metadata": {
+        "id": "hqEhmtAZSGsV",
+        "outputId": "d8c5d2f1-7147-4486-83ae-a65621c05d20",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 126,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of rows before deletion: 11852\n",
+            "Number of rows after deletion: 11835\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Now I want the % of each postal prefix that meet the criteria for high-quality internet in Winnipeg, sorted highest to lowest"
       ],
       "metadata": {
@@ -28789,9 +28838,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Uoh7-5Pnz-TA",
-        "outputId": "6f1a6500-777d-43d2-ee59-fce6f0acc73b"
+        "outputId": "2c697732-dde5-4d08-adb9-e585e9d4aa00"
       },
-      "execution_count": 104,
+      "execution_count": 127,
       "outputs": [
         {
           "output_type": "stream",
@@ -28886,9 +28935,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZeOT3WKRM3ry",
-        "outputId": "cae891b4-0158-4a41-b53a-86050141d148"
+        "outputId": "dd66c092-9f76-4308-c869-0ea4809aaf0c"
       },
-      "execution_count": 122,
+      "execution_count": 128,
       "outputs": [
         {
           "output_type": "stream",
@@ -29125,9 +29174,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ji4skXY7D0nu",
-        "outputId": "da161027-ca21-49ee-8bdf-64235a7c1718"
+        "outputId": "018c154e-558a-4673-c3f8-de6b84456496"
       },
-      "execution_count": 105,
+      "execution_count": 129,
       "outputs": [
         {
           "output_type": "stream",
@@ -29141,7 +29190,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-105-857984317974>:5: FutureWarning: The default value of numeric_only in DataFrameGroupBy.median is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+            "<ipython-input-129-857984317974>:5: FutureWarning: The default value of numeric_only in DataFrameGroupBy.median is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
             "  median_metrics = winnipeg_data.groupby('POSTAL PREFIX').median()\n"
           ]
         }
