--- a/NEC_data_cleaning.ipynb
+++ b/NEC_data_cleaning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOFAi4PMGdmPw7AmT1BGtxv",
+      "authorship_tag": "ABX9TyMe8p+jwO4I6T6BzLevM48H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29126,13 +29126,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Seeing how Postal Prefix median metrics all meet the criteria for \"high-quality internet\""
+      ],
+      "metadata": {
+        "id": "1tK73gvCfdQF"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Step 1: Filter the data for tests in Winnipeg\n",
         "winnipeg_data = df[df['CLIENT CITY'] == 'Winnipeg']\n",
         "\n",
         "# Step 2: Calculate the median metrics for each POSTAL PREFIX\n",
-        "median_metrics = winnipeg_data.groupby('POSTAL PREFIX').median()\n",
+        "median_metrics = winnipeg_data.groupby('POSTAL PREFIX')[['DOWNLOAD SPEED', 'UPLOAD SPEED', 'LATENCY', 'JITTER', 'PACKET LOSS']].median(numeric_only=True)\n",
         "\n",
         "# Step 3: Check if any of the median metrics meet the criteria\n",
         "criteria_met = (median_metrics['DOWNLOAD SPEED'] >= 50) & \\\n",
@@ -29148,13 +29157,13 @@
         "print(postal_prefixes_met_criteria)\n"
       ],
       "metadata": {
+        "id": "2uzKIQWbfagK",
+        "outputId": "e4a6d224-33d5-426b-c9b6-b220a5a853c6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "Ji4skXY7D0nu",
-        "outputId": "e5a799fc-cfc8-4e93-cbe1-77fa443a41f9"
+        }
       },
-      "execution_count": 543,
+      "execution_count": 547,
       "outputs": [
         {
           "output_type": "stream",
@@ -29162,14 +29171,6 @@
           "text": [
             "POSTAL PREFIX that meet the criteria:\n",
             "['R2J', 'R2L', 'R2X', 'R3E', 'R3K', 'R3R', 'R3Y']\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-543-857984317974>:5: FutureWarning: The default value of numeric_only in DataFrameGroupBy.median is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
-            "  median_metrics = winnipeg_data.groupby('POSTAL PREFIX').median()\n"
           ]
         }
       ]
