--- a/NEC_June_14_2023_data.ipynb
+++ b/NEC_June_14_2023_data.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNLDwKPYNe1vxKkFYw+GJ3a",
+      "authorship_tag": "ABX9TyOLarLV2KrKcZD4u43zJ+ZL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31803,16 +31803,22 @@
         "        print(f\"t-statistic: {t_statistic}\")\n",
         "        print(f\"p-value: {p_value}\")\n",
         "        print(\"There is no statistically significant difference in {column_name} between R2W and other POSTAL PREFIX values.\")\n",
-        "        print()\n"
+        "        print()\n",
+        "\n",
+        "n1 = len(df_R2W[column_name])\n",
+        "n2 = len(df_other[column_name])\n",
+        "\n",
+        "degrees_of_freedom = (n1 + n2) - 2\n",
+        "print(\"df:\",degrees_of_freedom)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "geYYEEGwnwL5",
-        "outputId": "2166691f-69f5-4bc0-e551-1aeba2a32dc8"
+        "outputId": "273e7b3d-ed6c-4350-f2ef-7250158e752d"
       },
-      "execution_count": 196,
+      "execution_count": 205,
       "outputs": [
         {
           "output_type": "stream",
@@ -31842,7 +31848,8 @@
             "t-statistic: 15.819327020924336\n",
             "p-value: 6.766589852419848e-50\n",
             "There is a statistically significant difference in {column_name} between R2W and other POSTAL PREFIX values.\n",
-            "\n"
+            "\n",
+            "df: 12258\n"
           ]
         }
       ]
