--- a/NEC_June_14_2023_data.ipynb
+++ b/NEC_June_14_2023_data.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMTvcbSv/CKluD6gkyYDC3W",
+      "authorship_tag": "ABX9TyM0gtpW/BS6KmwYl2SK8o45",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32458,6 +32458,298 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Sorting postal prefix from best to worst, where median upload and download speeds are high and median jitter, latency, and packet loss are low."
+      ],
+      "metadata": {
+        "id": "nqj29PJ2vt1m"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import scipy.stats as stats\n",
+        "\n",
+        "# Get the unique POSTAL PREFIX values in the sample\n",
+        "postal_prefixes = df['POSTAL PREFIX'].unique()\n",
+        "\n",
+        "# Specify the columns containing the numerical data\n",
+        "columns = ['UPLOAD SPEED', 'DOWNLOAD SPEED', 'JITTER', 'LATENCY', 'PACKET LOSS']\n",
+        "\n",
+        "# Initialize a dictionary to store the median values for each prefix\n",
+        "prefix_medians = {}\n",
+        "\n",
+        "# Calculate the median values for each prefix\n",
+        "for prefix in postal_prefixes:\n",
+        "    df_prefix = df[df['POSTAL PREFIX'] == prefix]\n",
+        "    prefix_medians[prefix] = {}\n",
+        "    for column in columns:\n",
+        "        median_value = df_prefix[column].median()\n",
+        "        prefix_medians[prefix][column] = median_value\n",
+        "\n",
+        "# Sort the postal prefixes based on the median values\n",
+        "sorted_prefixes = sorted(postal_prefixes, key=lambda x: (\n",
+        "    -prefix_medians[x]['UPLOAD SPEED'],\n",
+        "    -prefix_medians[x]['DOWNLOAD SPEED'],\n",
+        "    prefix_medians[x]['JITTER'],\n",
+        "    prefix_medians[x]['LATENCY'],\n",
+        "    prefix_medians[x]['PACKET LOSS']\n",
+        "))\n",
+        "\n",
+        "# Print the sorted list of postal prefixes and their median values\n",
+        "for prefix in sorted_prefixes:\n",
+        "    print(f\"Postal Prefix: {prefix}\")\n",
+        "    for column in columns:\n",
+        "        median_value = prefix_medians[prefix][column]\n",
+        "        print(f\"Median {column}: {median_value}\")\n",
+        "    print()\n"
+      ],
+      "metadata": {
+        "id": "txQ9gDXP07g7",
+        "outputId": "8a8c7462-8866-4bb7-b7df-412ae342f992",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 215,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Postal Prefix: R3H\n",
+            "Median UPLOAD SPEED: 92.72999999999999\n",
+            "Median DOWNLOAD SPEED: 89.275\n",
+            "Median JITTER: 0.625\n",
+            "Median LATENCY: 33.89\n",
+            "Median PACKET LOSS: 6.76\n",
+            "\n",
+            "Postal Prefix: R2R\n",
+            "Median UPLOAD SPEED: 19.5\n",
+            "Median DOWNLOAD SPEED: 83.67\n",
+            "Median JITTER: 0.88\n",
+            "Median LATENCY: 7.32\n",
+            "Median PACKET LOSS: 0.21\n",
+            "\n",
+            "Postal Prefix: R2X\n",
+            "Median UPLOAD SPEED: 18.83\n",
+            "Median DOWNLOAD SPEED: 86.18\n",
+            "Median JITTER: 1.28\n",
+            "Median LATENCY: 33.99\n",
+            "Median PACKET LOSS: 0.24\n",
+            "\n",
+            "Postal Prefix: R3K\n",
+            "Median UPLOAD SPEED: 18.74\n",
+            "Median DOWNLOAD SPEED: 186.98\n",
+            "Median JITTER: 2.98\n",
+            "Median LATENCY: 36.83\n",
+            "Median PACKET LOSS: 0.02\n",
+            "\n",
+            "Postal Prefix: R2J\n",
+            "Median UPLOAD SPEED: 16.84\n",
+            "Median DOWNLOAD SPEED: 72.79\n",
+            "Median JITTER: 1.58\n",
+            "Median LATENCY: 39.87\n",
+            "Median PACKET LOSS: 0.28\n",
+            "\n",
+            "Postal Prefix: R3W\n",
+            "Median UPLOAD SPEED: 14.95\n",
+            "Median DOWNLOAD SPEED: 38.075\n",
+            "Median JITTER: 2.955\n",
+            "Median LATENCY: 44.795\n",
+            "Median PACKET LOSS: 0.32\n",
+            "\n",
+            "Postal Prefix: R3X\n",
+            "Median UPLOAD SPEED: 14.855\n",
+            "Median DOWNLOAD SPEED: 115.845\n",
+            "Median JITTER: 1.55\n",
+            "Median LATENCY: 40.94\n",
+            "Median PACKET LOSS: 0.345\n",
+            "\n",
+            "Postal Prefix: R3Y\n",
+            "Median UPLOAD SPEED: 14.75\n",
+            "Median DOWNLOAD SPEED: 80.49\n",
+            "Median JITTER: 1.64\n",
+            "Median LATENCY: 36.64\n",
+            "Median PACKET LOSS: 0.11\n",
+            "\n",
+            "Postal Prefix: R3P\n",
+            "Median UPLOAD SPEED: 14.62\n",
+            "Median DOWNLOAD SPEED: 85.435\n",
+            "Median JITTER: 0.275\n",
+            "Median LATENCY: 48.82\n",
+            "Median PACKET LOSS: 8.395\n",
+            "\n",
+            "Postal Prefix: R2L\n",
+            "Median UPLOAD SPEED: 13.94\n",
+            "Median DOWNLOAD SPEED: 92.77\n",
+            "Median JITTER: 1.52\n",
+            "Median LATENCY: 42.86\n",
+            "Median PACKET LOSS: 0.19\n",
+            "\n",
+            "Postal Prefix: R3R\n",
+            "Median UPLOAD SPEED: 13.25\n",
+            "Median DOWNLOAD SPEED: 101.55\n",
+            "Median JITTER: 2.13\n",
+            "Median LATENCY: 40.35\n",
+            "Median PACKET LOSS: 0.22\n",
+            "\n",
+            "Postal Prefix: R3T\n",
+            "Median UPLOAD SPEED: 12.545\n",
+            "Median DOWNLOAD SPEED: 59.675\n",
+            "Median JITTER: 2.24\n",
+            "Median LATENCY: 38.315\n",
+            "Median PACKET LOSS: 0.11\n",
+            "\n",
+            "Postal Prefix: R3E\n",
+            "Median UPLOAD SPEED: 11.45\n",
+            "Median DOWNLOAD SPEED: 69.245\n",
+            "Median JITTER: 2.1849999999999996\n",
+            "Median LATENCY: 51.78\n",
+            "Median PACKET LOSS: 0.02\n",
+            "\n",
+            "Postal Prefix: R2K\n",
+            "Median UPLOAD SPEED: 10.425\n",
+            "Median DOWNLOAD SPEED: 38.545\n",
+            "Median JITTER: 2.105\n",
+            "Median LATENCY: 46.685\n",
+            "Median PACKET LOSS: 0.29\n",
+            "\n",
+            "Postal Prefix: R3V\n",
+            "Median UPLOAD SPEED: 10.2\n",
+            "Median DOWNLOAD SPEED: 49.5\n",
+            "Median JITTER: 3.6\n",
+            "Median LATENCY: 45.82\n",
+            "Median PACKET LOSS: 0.04\n",
+            "\n",
+            "Postal Prefix: R2Y\n",
+            "Median UPLOAD SPEED: 9.73\n",
+            "Median DOWNLOAD SPEED: 164.495\n",
+            "Median JITTER: 1.82\n",
+            "Median LATENCY: 39.465\n",
+            "Median PACKET LOSS: 0.01\n",
+            "\n",
+            "Postal Prefix: R3B\n",
+            "Median UPLOAD SPEED: 9.69\n",
+            "Median DOWNLOAD SPEED: 70.74\n",
+            "Median JITTER: 0.84\n",
+            "Median LATENCY: 37.62\n",
+            "Median PACKET LOSS: 0.14\n",
+            "\n",
+            "Postal Prefix: R2P\n",
+            "Median UPLOAD SPEED: 8.79\n",
+            "Median DOWNLOAD SPEED: 48.7\n",
+            "Median JITTER: 2.12\n",
+            "Median LATENCY: 43.72\n",
+            "Median PACKET LOSS: 0.13\n",
+            "\n",
+            "Postal Prefix: R3M\n",
+            "Median UPLOAD SPEED: 8.13\n",
+            "Median DOWNLOAD SPEED: 51.489999999999995\n",
+            "Median JITTER: 1.5750000000000002\n",
+            "Median LATENCY: 48.78\n",
+            "Median PACKET LOSS: 0.27\n",
+            "\n",
+            "Postal Prefix: R3G\n",
+            "Median UPLOAD SPEED: 8.07\n",
+            "Median DOWNLOAD SPEED: 44.525000000000006\n",
+            "Median JITTER: 1.8050000000000002\n",
+            "Median LATENCY: 45.985\n",
+            "Median PACKET LOSS: 0.77\n",
+            "\n",
+            "Postal Prefix: R2H\n",
+            "Median UPLOAD SPEED: 7.835000000000001\n",
+            "Median DOWNLOAD SPEED: 30.66\n",
+            "Median JITTER: 2.0549999999999997\n",
+            "Median LATENCY: 47.165\n",
+            "Median PACKET LOSS: 0.41500000000000004\n",
+            "\n",
+            "Postal Prefix: R2G\n",
+            "Median UPLOAD SPEED: 7.57\n",
+            "Median DOWNLOAD SPEED: 37.39\n",
+            "Median JITTER: 2.045\n",
+            "Median LATENCY: 50.44\n",
+            "Median PACKET LOSS: 0.05\n",
+            "\n",
+            "Postal Prefix: R3C\n",
+            "Median UPLOAD SPEED: 6.99\n",
+            "Median DOWNLOAD SPEED: 30.035\n",
+            "Median JITTER: 2.0149999999999997\n",
+            "Median LATENCY: 50.474999999999994\n",
+            "Median PACKET LOSS: 0.4\n",
+            "\n",
+            "Postal Prefix: R2M\n",
+            "Median UPLOAD SPEED: 6.82\n",
+            "Median DOWNLOAD SPEED: 62.59\n",
+            "Median JITTER: 2.76\n",
+            "Median LATENCY: 38.01\n",
+            "Median PACKET LOSS: 0.0\n",
+            "\n",
+            "Postal Prefix: R3L\n",
+            "Median UPLOAD SPEED: 6.59\n",
+            "Median DOWNLOAD SPEED: 64.67\n",
+            "Median JITTER: 1.58\n",
+            "Median LATENCY: 37.04\n",
+            "Median PACKET LOSS: 0.12\n",
+            "\n",
+            "Postal Prefix: R2W\n",
+            "Median UPLOAD SPEED: 6.59\n",
+            "Median DOWNLOAD SPEED: 50.97\n",
+            "Median JITTER: 1.13\n",
+            "Median LATENCY: 52.32\n",
+            "Median PACKET LOSS: 3.64\n",
+            "\n",
+            "Postal Prefix: R2V\n",
+            "Median UPLOAD SPEED: 6.275\n",
+            "Median DOWNLOAD SPEED: 37.995000000000005\n",
+            "Median JITTER: 1.705\n",
+            "Median LATENCY: 52.885\n",
+            "Median PACKET LOSS: 0.965\n",
+            "\n",
+            "Postal Prefix: R3N\n",
+            "Median UPLOAD SPEED: 5.29\n",
+            "Median DOWNLOAD SPEED: 40.33\n",
+            "Median JITTER: 1.4049999999999998\n",
+            "Median LATENCY: 44.83\n",
+            "Median PACKET LOSS: 0.515\n",
+            "\n",
+            "Postal Prefix: R2N\n",
+            "Median UPLOAD SPEED: 5.205\n",
+            "Median DOWNLOAD SPEED: 40.36\n",
+            "Median JITTER: 2.68\n",
+            "Median LATENCY: 40.894999999999996\n",
+            "Median PACKET LOSS: 0.0\n",
+            "\n",
+            "Postal Prefix: R2C\n",
+            "Median UPLOAD SPEED: 4.45\n",
+            "Median DOWNLOAD SPEED: 139.35\n",
+            "Median JITTER: 1.68\n",
+            "Median LATENCY: 35.02\n",
+            "Median PACKET LOSS: 0.34\n",
+            "\n",
+            "Postal Prefix: R3J\n",
+            "Median UPLOAD SPEED: 2.01\n",
+            "Median DOWNLOAD SPEED: 7.585\n",
+            "Median JITTER: 2.2649999999999997\n",
+            "Median LATENCY: 57.625\n",
+            "Median PACKET LOSS: 1.59\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "R2W is 26/31 when sorted for high median Upload and Download, and low median Jitter, Latency and Packet loss."
+      ],
+      "metadata": {
+        "id": "G6YUFZ9r18sv"
+      }
     }
   ]
 }
