--- a/NEC_June_14_2023_data.ipynb
+++ b/NEC_June_14_2023_data.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM0gtpW/BS6KmwYl2SK8o45",
+      "authorship_tag": "ABX9TyNJX+K6FDE45R56xDev7w4W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32509,11 +32509,11 @@
         "    print()\n"
       ],
       "metadata": {
-        "id": "txQ9gDXP07g7",
-        "outputId": "8a8c7462-8866-4bb7-b7df-412ae342f992",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "txQ9gDXP07g7",
+        "outputId": "8a8c7462-8866-4bb7-b7df-412ae342f992"
       },
       "execution_count": 215,
       "outputs": [
@@ -32750,6 +32750,211 @@
       "metadata": {
         "id": "G6YUFZ9r18sv"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Adding columns for Median values defined by Postal Prefix for each of the 5 metrics"
+      ],
+      "metadata": {
+        "id": "I8RT_B9L3vXI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# Get the unique POSTAL PREFIX values in the sample\n",
+        "postal_prefixes = df['POSTAL PREFIX'].unique()\n",
+        "\n",
+        "# Initialize new columns for median values\n",
+        "df['MEDIAN UPLOAD'] = 0.0\n",
+        "df['MEDIAN DOWNLOAD'] = 0.0\n",
+        "df['MEDIAN JITTER'] = 0.0\n",
+        "df['MEDIAN PACKET LOSS'] = 0.0\n",
+        "df['MEDIAN LATENCY'] = 0.0\n",
+        "\n",
+        "# Calculate and fill the median values for each postal prefix\n",
+        "for prefix in postal_prefixes:\n",
+        "    prefix_data = df[df['POSTAL PREFIX'] == prefix]\n",
+        "    median_upload = prefix_data['UPLOAD SPEED'].median()\n",
+        "    median_download = prefix_data['DOWNLOAD SPEED'].median()\n",
+        "    median_jitter = prefix_data['JITTER'].median()\n",
+        "    median_packet_loss = prefix_data['PACKET LOSS'].median()\n",
+        "    median_latency = prefix_data['LATENCY'].median()\n",
+        "    df.loc[df['POSTAL PREFIX'] == prefix, 'MEDIAN UPLOAD'] = median_upload\n",
+        "    df.loc[df['POSTAL PREFIX'] == prefix, 'MEDIAN DOWNLOAD'] = median_download\n",
+        "    df.loc[df['POSTAL PREFIX'] == prefix, 'MEDIAN JITTER'] = median_jitter\n",
+        "    df.loc[df['POSTAL PREFIX'] == prefix, 'MEDIAN PACKET LOSS'] = median_packet_loss\n",
+        "    df.loc[df['POSTAL PREFIX'] == prefix, 'MEDIAN LATENCY'] = median_latency\n",
+        "\n",
+        "# Sort the DataFrame based on the defined criteria\n",
+        "df_sorted = df.sort_values(by=['MEDIAN UPLOAD', 'MEDIAN DOWNLOAD', 'MEDIAN JITTER', 'MEDIAN PACKET LOSS'], ascending=[False, False, True, True])\n",
+        "\n",
+        "# Save the sorted DataFrame with the added median columns to a CSV file\n",
+        "df_sorted.to_csv('https://github.com/InternetSocietyManitobaChapter/JupyterNotebook_NorthEndConnect/raw/main/nec%20June%2014%202023.csv', index=False)\n"
+      ],
+      "metadata": {
+        "id": "YIWElBXAA6fp"
+      },
+      "execution_count": 219,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Confirming it worked"
+      ],
+      "metadata": {
+        "id": "s4_mSzu433Yn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "column_names = df.columns.tolist()\n",
+        "print(column_names)\n"
+      ],
+      "metadata": {
+        "id": "dJ56OIlE3sMR",
+        "outputId": "3c92c19a-61ab-4804-f498-56cba2c4c460",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 220,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['TEST ID', 'TEST DATE / UTC HOUR', 'GEO LATITUDE', 'GEO LONGITUDE', 'DOWNLOAD SPEED', 'UPLOAD SPEED', 'JITTER', 'LATENCY', 'PACKET LOSS', 'MOBILE TEST', 'ISP', 'CLIENT IP', 'CLIENT CITY', 'CLIENT PROVINCE', 'CLIENT POSTAL CODE', 'AS NUMBER', 'IPV6 SUPPORTED', 'DNSSEC SUPPORTED', 'TEST SERVER', 'browser_test_url', 'HEATMAP_MUNICIPALITY', 'HEATMAP_CENSUS_TRACTS', 'POSTAL PREFIX', 'MEDIAN UPLOAD', 'MEDIAN DOWNLOAD', 'MEDIAN JITTER', 'MEDIAN PACKET LOSS', 'PREFIX AREA', 'MEDIAN LATENCY']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Adding PREFIX AREA column"
+      ],
+      "metadata": {
+        "id": "jNYiIuZBAgcR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define the mapping between prefixes and areas\n",
+        "prefix_area_mapping = {\n",
+        "    'R2W': 'North End',\n",
+        "    'R2M': 'St. Vital North',\n",
+        "    'R3W': 'North Kildonan E',\n",
+        "    'R3M': 'Crescentwood Central',\n",
+        "    'R2G': 'North Kildonan N',\n",
+        "    'R3R': 'Assiniboine South',\n",
+        "    'R2V': 'West Kildonan',\n",
+        "    'R2P': 'Old Kildonan',\n",
+        "    'R2N': 'St. Vital SW',\n",
+        "    'R3K': 'St. James SW',\n",
+        "    'R2H': 'St. Boniface NW',\n",
+        "    'R3J': 'St. James SE',\n",
+        "    'R3B': 'Exchange District',\n",
+        "    'R3C': 'Downtown/The Forks',\n",
+        "    'R3P': 'Fort Garry NW / Tuxedo',\n",
+        "    'R2C': 'Transcona',\n",
+        "    'R2Y': 'St. James NW',\n",
+        "    'R3Y': 'Fort Garry W',\n",
+        "    'R3G': 'Minto / St. Mathews / Wolseley',\n",
+        "    'R3N': 'River Heights West',\n",
+        "    'R3T': 'Fort Garry NE',\n",
+        "    'R3L': 'River Heights E',\n",
+        "    'R2J': 'St. Boniface NE',\n",
+        "    'R3A': 'Centennial',\n",
+        "    'R3H': 'St. James NE',\n",
+        "    'R2K': 'East Kildonan',\n",
+        "    'R2X': 'Point Douglas',\n",
+        "    'R2R': 'Inkster West',\n",
+        "    'R2L': 'Elmwood',\n",
+        "    'R3X': 'St. Boniface S / St. Vital SE',\n",
+        "    'R3E': 'Sargent Park / Daniel McIntyre / Inkster SE',\n",
+        "    'R3V': 'Fort Garry S'\n",
+        "}\n",
+        "\n",
+        "# Add the new column based on the mapping\n",
+        "df['PREFIX AREA'] = df['POSTAL PREFIX'].map(prefix_area_mapping)\n",
+        "\n",
+        "# Get the unique PREFIX AREA values\n",
+        "unique_prefix_areas = df['PREFIX AREA'].unique()\n",
+        "\n",
+        "# Save the DataFrame a CSV file\n",
+        "df_sorted.to_csv('https://github.com/InternetSocietyManitobaChapter/JupyterNotebook_NorthEndConnect/raw/main/nec%20June%2014%202023.csv', index=False)\n",
+        "\n",
+        "# Print the columns and the number of unique PREFIX AREA values\n",
+        "print(\"Columns:\")\n",
+        "print(list(df.columns))\n",
+        "print()\n",
+        "print(\"Number of unique PREFIX AREA values:\", len(unique_prefix_areas))\n"
+      ],
+      "metadata": {
+        "id": "0bSV28I9Aju8",
+        "outputId": "ee9ad842-056e-468a-989e-71ebe5671c7e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 222,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Columns:\n",
+            "['TEST ID', 'TEST DATE / UTC HOUR', 'GEO LATITUDE', 'GEO LONGITUDE', 'DOWNLOAD SPEED', 'UPLOAD SPEED', 'JITTER', 'LATENCY', 'PACKET LOSS', 'MOBILE TEST', 'ISP', 'CLIENT IP', 'CLIENT CITY', 'CLIENT PROVINCE', 'CLIENT POSTAL CODE', 'AS NUMBER', 'IPV6 SUPPORTED', 'DNSSEC SUPPORTED', 'TEST SERVER', 'browser_test_url', 'HEATMAP_MUNICIPALITY', 'HEATMAP_CENSUS_TRACTS', 'POSTAL PREFIX', 'MEDIAN UPLOAD', 'MEDIAN DOWNLOAD', 'MEDIAN JITTER', 'MEDIAN PACKET LOSS', 'PREFIX AREA', 'MEDIAN LATENCY']\n",
+            "\n",
+            "Number of unique PREFIX AREA values: 31\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Moving Prefix Area column to the end"
+      ],
+      "metadata": {
+        "id": "AorSnp1KBV9_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = df[[col for col in df.columns if col != 'PREFIX AREA'] + ['PREFIX AREA']]\n",
+        "\n",
+        "column_names = df.columns.tolist()\n",
+        "print(column_names)\n",
+        "\n",
+        "# Save the DataFrame a CSV file\n",
+        "df_sorted.to_csv('https://github.com/InternetSocietyManitobaChapter/JupyterNotebook_NorthEndConnect/raw/main/nec%20June%2014%202023.csv', index=False)"
+      ],
+      "metadata": {
+        "id": "zab_J5ewBVmD",
+        "outputId": "0edadd98-2646-47fa-b02f-97d5da536594",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 224,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['TEST ID', 'TEST DATE / UTC HOUR', 'GEO LATITUDE', 'GEO LONGITUDE', 'DOWNLOAD SPEED', 'UPLOAD SPEED', 'JITTER', 'LATENCY', 'PACKET LOSS', 'MOBILE TEST', 'ISP', 'CLIENT IP', 'CLIENT CITY', 'CLIENT PROVINCE', 'CLIENT POSTAL CODE', 'AS NUMBER', 'IPV6 SUPPORTED', 'DNSSEC SUPPORTED', 'TEST SERVER', 'browser_test_url', 'HEATMAP_MUNICIPALITY', 'HEATMAP_CENSUS_TRACTS', 'POSTAL PREFIX', 'MEDIAN UPLOAD', 'MEDIAN DOWNLOAD', 'MEDIAN JITTER', 'MEDIAN PACKET LOSS', 'MEDIAN LATENCY', 'PREFIX AREA']\n"
+          ]
+        }
+      ]
     }
   ]
 }
